--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,27 @@
 <resources>
     <string name="app_name">CustomBottomNavigationView</string>
     <string name="menu_home">Home</string>
-    <string name="menu_search">Tìm kiếm</string>
-    <string name="menu_message">Nhắn </string>
-    <string name="menu_profile">Profile</string>
+    <string name="menu_shopping">Giỏ hàng</string>
+    <string name="menu_message">Nhắn tin</string>
+    <string name="menu_profile">Thông tin</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="menu_feedback">Phản hồi</string>
+    <string name="menu_changepassword">Đổi mật khẩu</string>
+    <string name="menu_transaction_history">Lịch sử giao dịch</string>
+    <string name="menu_logout">thoát</string>
+    <string name="menu_managerPhone">Quản lý điện thoại</string>
+    <string name="menu_managerFeedback">quản lý phản hồi</string>
+    <string name="menu_managerUser">quản lý tài khoản</string>
+    <string name="menu_managerPhoneDetails">quản lý thông tin điện thoại</string>
+    <string name="menu_admin">admin</string>
+
+
+    <string name="top_icon">TOP ICON</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="login">LOGIN</string>
+    <string name="forgot_password">FORGOT PASSWORD?</string>
+    <string name="addCarts">Thêm vào giỏ hàng</string>
+
 </resources>
