--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name"></string>
+    <string name="app_name">PhoneApp</string>
     <string name="menu_home">Home</string>
     <string name="menu_shopping">Giỏ hàng</string>
     <string name="menu_message">Nhắn tin</string>
